replace test composer package aws-sdk-php with guzzlehttp/guzzle. Updates test page to ping google and check result.

--- a/www/testPage/test.html
+++ b/www/testPage/test.html
@@ -3,6 +3,6 @@
         <title>PHP Test</title>
     </head>
     <body>
-        <p><?php echo $testVar;?></p> 
+        <p><?php echo $displayString;?></p> 
     </body>
 </html>
