--- a/www/testPage/test.html
+++ b/www/testPage/test.html
@@ -19,7 +19,7 @@
             }
                     
             tr:nth-child(even) {
-                background-color:DodgerBlue;
+                background-color:rgb(94, 196, 255);
             }
             tr:nth-child(odd) {
                 background-color:LightGray;
