--- a/www/testPage/test.html
+++ b/www/testPage/test.html
@@ -13,7 +13,7 @@
             }
                  
             td, th {
-                border: 1px solid #dddddd;
+                border: 1px solid #292828;
                 text-align: left;
                 padding: 8px;
             }
